app/assets/stylesheets/dashboard.css
.dashboard .header h1 {
  font-size: 3em;
  margin-bottom: 0;
}

@media (max-width: 2000px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin-top: 7.5px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
        display:block !important;
    }
}

.dashboard .stats h4 {
  margin-bottom: 0;
  font-size: 14px;
  color: #888;
}

.dashboard .stats h4 b {
  font-weight: normal;
  color: #333;
}

@media (min-width:768px) {
  .dashboard .stats h4 {
    margin-top: 0;
    margin-bottom: 20px;
  }
}

.dashboard h3 {
  text-align: center;
  margin-top: 20px;
  padding-top: -10px;
  overflow: hidden;
}

/* line-on-sides-header example based on https://css-tricks.com/line-on-sides-headers/ */
.dashboard h3 i {
  display: inline-block;
  position: relative;
  font-style: normal;
}

.dashboard h3 i:before,
.dashboard h3 i:after {
  content: "";
  position: absolute;
  height: 12px;
  border-bottom: 1px solid #ccc;
  top: 0;
  width: 600px;
}

.dashboard h3 i:before {
  right: 100%;
  margin-right: 15px;
}

.dashboard h3 i:after {
  left: 100%;
  margin-left: 15px;
}

.dashboard .nav-tabs > li, .nav-pills > li {
  float:none;
  display:inline-block;
  *display:inline; /* ie7 fix */
   zoom:1; /* hasLayout ie7 trigger */
}

.dashboard .nav-tabs, .nav-pills {
  text-align:center;
}

.dashboard .tab-pane {
  padding: 12px 8px;
}

.dashboard .meta {
  font-size: 13px;
  color: #aaa;
}

.dashboard .meta .btn,
.dashboard .meta .fa {
  color: #888;
}

.dashboard .btn-block,
.dashboard .input-group {
  margin-bottom: 6px;
}

.dashboard .dashboard-blog {
  display: block;
}

.dashboard .dashboard-blog .img {
  background-size: cover;
}

@media (max-width:992px) {
  .dashboard .dashboard-blog {
    margin-top: 20px;
  }
}

.dashboard .dashboard-blog div.blog-caption {
  padding-top: 220px;
}

@media (max-width:992px) {
  .dashboard .dashboard-blog div.blog-caption {
    padding-top: 160px;
  }
}

@media (max-width:768px) {
  .dashboard .dashboard-blog div.blog-caption {
    padding-top: 120px;
  }
}

.dashboard .dashboard-blog div.blog-caption h4 {
  background: rgba(255, 255, 255, 0.8);
  padding: 16px 10px 6px;
}

.dashboard .dashboard-blog div.blog-caption h4 a.title,
.dashboard .lists h4 a {
  color: #444;
}

.dashboard .dashboard-blog div.blog-caption h4 small {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #444;
  font-size: 13px;
}

.dashboard .dashboard-blog div.blog-caption h4 small.pull-right {
  padding-top: 6px;
}

.dashboard .wikis .wiki {
  margin-top: 16px;
}

.dashboard .wikis h4 {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-family: "Junction Light", Helvetica, Arial, sans-serif;
  font-size: 18px;
  margin-top: 0px;
}

.dashboard .wikis h4 a {
  color: #444;
}

.dashboard .activity {
  padding: 20px 0;
}

.dashboard .activity-dropdown label {
  font-weight: normal;
}

.dashboard .activity .note {
  margin-bottom: 40px;
}

.dashboard .activity .note a.img {
  max-height: 200px;
  display: block;
  overflow: hidden;
  margin-bottom: 10px;
}

.dashboard .activity .note h4 a {
  color: #444;
}

.dashboard .lists h4 {
  margin: 18px 0 2px;
}

.note-default {

}

.note .header-icon {
  text-align: center;
  margin-top: -14px;
}

.note .header-icon i {
  padding: 9px;
  border-radius: 20px;
}

.note .btn-default {
  margin-left: 6px;
}

.note-pane h4 {
  margin-top: 0;
}

.note-pane {
  padding: 0 10px 2px;
  border-top: 2px solid white;
}

/* begin wiki and comment node styles */

.note-wiki,
.note-comment,
.note-wiki    .btn-default,
.note-comment .btn-default {
  background: #f8f8f8;
  border-color: #ddd;
  color: #555;
}

.note-wiki    .btn-default:hover,
.note-comment .btn-default:hover {
  background: #eee;
}

.note-wiki    .btn-default,
.note-comment .btn-default {
  background: #B1CCF3;
}

.note-wiki i.fa,
.note-wiki .meta i.fa,
.note-comment i.fa,
.note-comment .meta i.fa {
  background: #f8f8f8;
  color: #444;
}

.note-wiki .meta,
.note-comment .meta {
  color: #888;
}

@media (min-width:992px) {
  .note-container-wiki {
    display: none;
  }
}

/* end wiki and comment node styles */

/* begin event node styles */

.note-question,
.note-question .btn-default {
  background: #FFF2CC;
  border-color: #F9D0A2;
  color: #DAA583;
}

.note-question .btn-default:hover {
  background: #FFE7B3;
}

.note-question .meta,
.note-question i.fa,
.note-question .meta i.fa {
  color: #DAA583;
  background: #FFF2CC;
}

/* end question node styles */

/* begin event node styles */

.note-event,
.note-event .btn-default {
  background: #CFE2F3;
  border-color: #B1CCF3;
  color: #7591BF;
}

.note-event .btn-default:hover {
  background: #BAD5EE;
}

.note-event .btn-default {
  background: #B1CCF3;
}

.note-event .meta,
.note-event i.fa,
.note-event .meta i.fa {
  color: #7591BF;
  background: #CFE2F3;
}

/* end event node styles */

.note .meta a:hover i {
  color: #666;
}

.note .btn-default {
  background: none;
}

.wiki .btn-diff {
  color: #ccc;
}

.wiki-diff p.header {
  margin-top: 0;
  padding-top: 0;
  padding-bottom: 4px;
}

.wiki-diff {
  overflow-x: hidden;
}

.note-answer {
  background: #f3ffc1;
  border-color: #babb80;
  color: #555;
}

.note-answer .btn-default {
  color: #75754e;
  border-color: #75754e;
  margin-bottom: 5px;
}

.note-answer .btn-default:hover {
  background: #e6f3ad;
}

.note-answer .btn-default i {
  padding: 4px;
}

.note-answer .fa-question-circle {
  color: #75754e;
  background: #f3ffc1;
}

@media (max-width:269px) {
  .btn.btn-sm.btn-default
  {
    margin-top:10px;
  }
}

